# manaflow

./: .env.local.template  .gitignore  0github  ANALYSIS_INDEX.md  CLAUDE.local.md  CLAUDE.md  CLOUD_WORKSPACE_OPEN_WITH.md  CODE_SNIPPETS.md  DOCUMENTATION.md  Dockerfile  ELECTRON_SETTINGS.md  EXPLORATION_SUMMARY.md  LICENSE  LICENSE-MIT  LOCAL_REPO_IMPLEMENTATION.md  Makefile  QUICK_REFERENCE.md  README.md  README_WORKSPACE_EXPLORATION.md  REPO_LINK_FEATURE_ANALYSIS.md  REPO_LINK_FEATURE_SUMMARY.txt  TODO_ACP_T_IOS.md  WORKSPACE_ARCHITECTURE.txt  WORKSPACE_CREATION_ANALYSIS.md  eslint.config.js  package.json  plan-issues-schema.md  run-notarytool.py  setup-notarytool.sh  vitest.workspace.ts
.agents/skills/: rivetkit  rivetkit-client-javascript  rivetkit-client-react  rivetkit-client-swift  rivetkit-client-swiftui
.agents/skills/cmux/: SKILL.md
.beads/: .gitignore  deletions.jsonl  issues.jsonl
.claude/: settings.json
.claude/commands/: review_agent.md  upstream_gap.md
.devcontainer/: devcontainer.json
.github/workflows/: checks.yml  daily-release.yml  docker.yml  morph-snapshot.yml  pve-lxc-snapshot.yml  release-on-tag.yml  release-updates.yml  sandbox.yml  screenshot-collector.yml  sync-dev-docs.yml  sync-upstream-pr.yml  tests.yml
apps/cli/: package.json
apps/cli/src/: app.tsx  cmuxClient.ts  commands.ts  config.ts  index.tsx  session.ts  stackAuth.ts  tokenStore.ts
apps/client/: .gitignore  build-mac-workaround.sh  electron-builder.fork.json  electron-builder.json  electron-builder.local.json  electron-builder.staging.json  electron-vite-plugin-resolve-workspace.ts  electron.vite.config.test.ts  electron.vite.config.ts  index-electron.html  index.html  package.json  vite.config.ts
apps/client/electron/: app-update.yml
apps/client/rivet-server/: benchmark.ts  registry.test.ts  registry.ts  server.ts
apps/cmux-devbox-2/: README.md
apps/cmux-proxy/: DEPLOYMENT.md  README.md
apps/devbox-e2b/: README.md  e2b.Dockerfile  e2b.toml
apps/edge-router/: package.json  wrangler.toml
apps/global-proxy/: Cargo.toml  DEPLOYMENT.md
apps/global-proxy-freestyle/: package.json  tsconfig.json
apps/global-proxy/src/: lib.rs  main.rs
apps/global-proxy/tests/: proxy_tests.rs
apps/manaflowX/: .gitmodules  CLAUDE.md  package.json
apps/server/: Dockerfile  package.json
apps/server/native/core/: Cargo.toml  index.d.ts  package.json
apps/server/native/core/.cargo/: config.toml
apps/server/native/core/src/: branches.rs  lib.rs  preview_proxy.rs  tests.rs  types.rs  util.rs
apps/server/native/core/src/diff/: landed.rs  mod.rs  refs.rs  workspace.rs
apps/server/native/core/src/merge_base/: bfs.rs  git.rs  mod.rs
apps/server/native/core/src/proxy/: auth.rs  handlers.rs  mod.rs  rewrite.rs  server.rs  tests.rs  types.rs
apps/server/native/core/src/repo/: cache.rs
apps/worker/: package.json
apps/www/: .mcp.json  instrumentation.ts  middleware.ts  next.config.ts  package.json  vitest.config.ts
cmux/scripts/: openvscode-entrypoint.sh
configs/: ide-deps.json
configs/desktop/: google-chrome.desktop
configs/novnc/: vnc.html
configs/systemd/: cmux-devtools.service  cmux-memory-setup.service  cmux-novnc-proxy.service  cmux-openvscode.service  cmux-vnc-proxy.service  cmux-websockify.service  cmux-x11vnc.service  cmux-xfce4.service  cmux-xterm.service  cmux.target  ide.env.cmux-code
crates/cmux-novnc-proxy/: Cargo.toml
crates/cmux-novnc-proxy/src/: lib.rs  main.rs
crates/cmux-novnc-proxy/tests/: proxy_tests.rs
crates/cmux-proxy/: Cargo.toml  README.md
crates/cmux-proxy/src/: lib.rs
crates/cmux-proxy/tests/: ldpreload.rs  proxy.rs  workspace.rs
crates/cmux-pty/: Cargo.toml
crates/cmux-pty/src/: cli.rs  main.rs
crates/cmux-pty/static/: index.html
crates/cmux-xterm/: .dockerignore  .gitignore
data/github/: pr-ground-truth.json  pr-open-ground-truth.json
docs/: PR27-PVE-LXC-REVIEW.md  README.md  local-workspace-bootstrap.md  styles.css  vscode-settings-sync.md
docs-ai/: hono.md  nitro.md
ios-app/: .gitignore  Info.plist  LICENSE  project.yml
ios-app/Sources/: AssistantMarkdownView.swift  CMuxApp.swift  ChatFix1MainView.swift  ChatKeyboardContainer.swift  ChatView.swift  ContentView.swift  ConversationListView.swift  Models.swift
ios-app/cmux.xcodeproj/: project.pbxproj
ios-app/cmuxUITests/: KeyboardSyncUITests.swift  MessagePositionUITests.swift  MultilineInputUITests.swift  ShortThreadLayoutUITests.swift
ios-app/scripts/: reload.sh
prompts/: environments-versions-1.md  task-runs-lazy.md
scripts/: build-cli.ts  build-electron-local.sh  build-mac-complete.sh  build-modal-snapshot.ts  build-prod-mac-arm64-no-notarize-or-sign.sh  build-prod-mac-arm64-no-notarize.sh  cdp_console.py  check-convex-preview-branches.ts  check.ts  code-review-runner.ts  daytona-devbox-snapshot.ts  daytona-snapshot.ts  deploy-global-proxy-freestyle.py  dev-container.sh  dev-electron.sh  dev-enhanced.sh  dev.sh  docker-local-sanity-check.sh  docker-trigger-screenshot.sh  download-cloudflare-ai-logs.ts  freestyle-list-vms.ts  freestyle-new.ts  freestyle-snapshot.ts  freestyle-upload-test.ts  morph-instance-manager.ts  morph-pause-old-active-instances.ts  morph-screenshot-collector.ts  morph-start-instance.ts  morph-stop-all-instances.ts  morph-test-snapshot.ts  morph_boot.py  morph_evaluate_zram.py  morph_snapshot.py  morph_start_instance.py  notarize-only.sh  notary-interactive.ts  notary-status.sh  notary-wait.sh  package.json  pr-review-inject.ts  (+25 more)
scripts/github/: fetch-pr-ground-truth.ts
scripts/novnc-proxy/: go.mod  main.go  proxy.go  proxy_test.go
scripts/providers/: freestyle.py
scripts/pve/: README.md  pve-api.sh  pve-lxc-setup.sh  pve-lxc-snapshot-cleanup.ts  pve-lxc-template.sh  pve-sandbox-maintenance-dry-run.ts  pve-test-template.sh  pve-tunnel-setup.sh  test-pve-cf-tunnel.ts  test-pve-lxc-client.ts
scripts/snapshot/: exec.py
scripts/stackframe/: convex-test.ts  get-run-diffs.ts
scripts/vnc-proxy/: main.go  main_test.go
skills/cmux/: SKILL.md
tools/convex-swift-gen/: generate-swift-api.ts  generate-swift.ts
(+828 files in other folders)
