[package]
name = "cmux-novnc-proxy"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
hyper = { version = "0.14", features = ["full"] }
tokio-tungstenite = { version = "0.21" }
tungstenite = "0.21"
clap = { version = "4", features = ["derive", "env"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
futures-util = "0.3"
base64 = "0.22"
http = "0.2"
percent-encoding = "2"
sha1 = "0.10"

[profile.release]
opt-level = 3
codegen-units = 1
lto = true
strip = true

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.21"
tungstenite = "0.21"
reqwest = { version = "0.12", features = ["json"] }
url = "2"
tempfile = "3"
