[package]
name = "cmux_native_core"
version = "0.1.0"
edition = "2021"

[features]
default = []
fuzz-tests = []

[lib]
crate-type = ["cdylib"]

[dependencies]
napi = { version = "2", default-features = false, features = ["napi4", "tokio_rt"] }
napi-derive = "2"
anyhow = "1"
rayon = "1.10"
dirs-next = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt", "rt-multi-thread", "net", "io-util", "sync", "time", "macros"] }
gix = { version = "0.66", default-features = true, features = ["status", "revision"] }
similar = "2"
# HTTP/2 and proxy dependencies
hyper = { version = "1.5", features = ["http1", "http2", "server", "client"] }
hyper-util = { version = "0.1", features = ["tokio", "server", "client", "client-legacy", "http1", "http2"] }
http-body-util = "0.1"
h2 = "0.4"
bytes = "1"
tracing = "0.1"
base64 = "0.22"
url = "2"
once_cell = "1"

[dev-dependencies]
tempfile = "3"
